prevent % truncation

--- a/app/imports/ui/transposerStyle.less
+++ b/app/imports/ui/transposerStyle.less
@@ -128,7 +128,7 @@
 
 
     #fields path {
-      fill: color-mix(in hsl, var(--gray-light), var(--accent) var(--v, 0%));
+      fill: color-mix(in hsl, var(--gray-light), var(--accent) var(--v, 0.1%));
     }
 
     #fields {
